Camino only - Bug 425225: Fix a possible crash when triggering the menu for a <select>. r/sr=pink